# clustering

./: .gitignore  README.md  main.py  pyproject.toml
data/: 100_Samples-2_Features-3_Centers.csv
data/processed/: blobs_bsas.csv  bsas_th1.5_q3.csv  bsas_th1.5_q5.csv  bsas_th10_q5.csv  bsas_th15_q5.csv  bsas_th3_q5.csv  fuzzy-c-means_1_4c_1.7m.csv  fuzzy-c-means_4c_1.2m.csv  fuzzy-c-means_4c_1.7m.csv  fuzzy-c-means_4c_2.7m.csv  k-means_3k.csv  k-means_4k.csv  k-means_4k_1.csv
data/raw/: 100S_2F_3C.csv  100S_2F_4C.csv
src/clustering/: bsas.py  common.py  fuzzy_c_means.py  k_means.py  main.py  proximity_measure.py  representative.py  utils.py
