[project]
name = "clustering"
version = "0.1.0"
description = "Clustering utilities used for a subject in a Master's degree in Applied Computing"
readme = "README.md"
authors = [
    { name = "Oscar Arambula", email = "peteroso876@gmail.com" },
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "scikit-learn>=1.7.2",
    "typer>=0.19.1",
]

[project.scripts]
clustering = "clustering:app"

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"
